[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "game"
authors = [
    {name = "Dinaldo A. Pessoa", email = "dinaldoap@gmail.com"},
]
description = "Game for M5 Stick"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

[project.urls]
repository = "https://github.com/dinaldoap/game"

[project.scripts]
game = "game.__main__:main"

[tool.setuptools.packages.find]
include = ["game*"]

[tool.setuptools_scm]
write_to = "game/version.py"
version_scheme = "no-guess-dev"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements-prod.txt"]}
